SERVER-36461 Add 'transaction' identifier to slow transaction log output