src/mongo/logger/log_component.cpp
@@ -136,6 +136,8 @@ StringData LogComponent::toStringData() const {
             return "bridge"_sd;
         case kTracking:
             return "tracking"_sd;
+        case kTransaction:
+            return "transaction"_sd;
         case kNumLogComponents:
             return "total"_sd;
             // No default. Compiler should complain if there's a log component that's not handled.
@@ -218,6 +220,8 @@ StringData LogComponent::getNameForLog() const {
             return "BRIDGE  "_sd;
         case kTracking:
             return "TRACKING"_sd;
+        case kTransaction:
+            return "TXN     "_sd;
         case kNumLogComponents:
             return "TOTAL   "_sd;
             // No default. Compiler should complain if there's a log component that's not handled.
