src/mongo/logger/log_component.h
@@ -66,6 +66,7 @@ public:
         kASIO,
         kBridge,
         kTracking,
+        kTransaction,
         kNumLogComponents
     };
 
